# git-sandbox

./: .gitignore  .ninja_log  CMakeLists.txt  README.md  audio_client.py  audio_server.py  build.ninja  build.sh  main  main.cpp  run.sh
.github/workflows/: build.yml  ci.yml
_codeql_build_dir/: example  unit_tests
examples/: main.cpp
include/mylib/: math_utils.hpp  string_utils.hpp
src/: main.cpp  math_utils.cpp  string_utils.cpp
tests/: test_math_utils.cpp  test_string_utils.cpp
